crates/docnav-typed-fields/tests/ui/field_defs_missing_field_attr.stderr
error: `FieldDefs` fields must have a `#[field(...)]` attribute
 --> tests/ui/field_defs_missing_field_attr.rs:5:5
  |
5 |     limit: i64,
  |     ^^^^^^^^^^
